k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
  - name: goserver-service
    protocol: TCP
    port: 80 # porta do service
    targetPort: 8000 # porta do container
