k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  ingressClassName: "nginx"
  rules:
  - host: "ingress.fullcycle.mathesu.com.br"
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: goserver-service
            port:
              number: 80
